; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/comedi/drivers/extr_usbdux.c_usbduxsub_start.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/comedi/drivers/extr_usbdux.c_usbduxsub_start.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.usbduxsub = type { %struct.TYPE_2__*, i32 }
%struct.TYPE_2__ = type { i32 }

@USBDUXSUB_FIRMWARE = common dso_local global i32 0, align 4
@VENDOR_DIR_OUT = common dso_local global i32 0, align 4
@USBDUXSUB_CPUCS = common dso_local global i32 0, align 4
@EZTIMEOUT = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [37 x i8] c"comedi_: control msg failed (start)\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.usbduxsub*)* @usbduxsub_start to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @usbduxsub_start(%struct.usbduxsub* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.usbduxsub*, align 8
  %4 = alloca i32, align 4
  %5 = alloca [16 x i64], align 16
  store %struct.usbduxsub* %0, %struct.usbduxsub** %3, align 8
  store i32 0, i32* %4, align 4
  %6 = getelementptr inbounds [16 x i64], [16 x i64]* %5, i64 0, i64 0
  store i64 0, i64* %6, align 16
  %7 = load %struct.usbduxsub*, %struct.usbduxsub** %3, align 8
  %8 = getelementptr inbounds %struct.usbduxsub, %struct.usbduxsub* %7, i32 0, i32 1
  %9 = load i32, i32* %8, align 8
  %10 = load %struct.usbduxsub*, %struct.usbduxsub** %3, align 8
  %11 = getelementptr inbounds %struct.usbduxsub, %struct.usbduxsub* %10, i32 0, i32 1
  %12 = load i32, i32* %11, align 8
  %13 = call i32 @usb_sndctrlpipe(i32 %12, i32 0)
  %14 = load i32, i32* @USBDUXSUB_FIRMWARE, align 4
  %15 = load i32, i32* @VENDOR_DIR_OUT, align 4
  %16 = load i32, i32* @USBDUXSUB_CPUCS, align 4
  %17 = getelementptr inbounds [16 x i64], [16 x i64]* %5, i64 0, i64 0
  %18 = load i32, i32* @EZTIMEOUT, align 4
  %19 = call i32 @usb_control_msg(i32 %9, i32 %13, i32 %14, i32 %15, i32 %16, i32 0, i64* %17, i32 1, i32 %18)
  store i32 %19, i32* %4, align 4
  %20 = load i32, i32* %4, align 4
  %21 = icmp slt i32 %20, 0
  br i1 %21, label %22, label %29

22:                                               ; preds = %1
  %23 = load %struct.usbduxsub*, %struct.usbduxsub** %3, align 8
  %24 = getelementptr inbounds %struct.usbduxsub, %struct.usbduxsub* %23, i32 0, i32 0
  %25 = load %struct.TYPE_2__*, %struct.TYPE_2__** %24, align 8
  %26 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %25, i32 0, i32 0
  %27 = call i32 @dev_err(i32* %26, i8* getelementptr inbounds ([37 x i8], [37 x i8]* @.str, i64 0, i64 0))
  %28 = load i32, i32* %4, align 4
  store i32 %28, i32* %2, align 4
  br label %30

29:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  br label %30

30:                                               ; preds = %29, %22
  %31 = load i32, i32* %2, align 4
  ret i32 %31
}

declare dso_local i32 @usb_control_msg(i32, i32, i32, i32, i32, i32, i64*, i32, i32) #1

declare dso_local i32 @usb_sndctrlpipe(i32, i32) #1

declare dso_local i32 @dev_err(i32*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
